Closed Bug 1721214 Opened 4 years ago Closed 4 years ago

nsIServiceWorkerManager registerForTest and registerForAddonPrincipal should return a rejected promise on calls that fail due to invalid parameters

Categories

(Core :: DOM: Service Workers, defect)

defect

Tracking

()

RESOLVED FIXED
92 Branch
Tracking Status
firefox92 --- fixed

People

(Reporter: rpl, Assigned: rpl)

Details

Attachments

(1 file)

While working on other issue related to the service workers and WebExtensions I did notice that these two ServiceWorkerManager methods are missing to call outer.forget(aPromise) before early returning due to invalid parameters (my apologies, I shouldn't have missed that).

The missing call to outer.forget(aPromise) isn't currently triggering any particular issue (because RegisterForTest is only used in test and a test would still fail because of the uncaught rejection related to the promise rejected internally and never returned by that method, and RegisterForAddonPrincipal is currently nightly only and not allowed yet on non nightly channels), but it is wrong and it should be fixed.

Assignee: nobody → lgreco
Status: NEW → ASSIGNED
Pushed by luca.greco@alcacoop.it: https://hg.mozilla.org/integration/autoland/rev/4d91e3fa4008 ServiceWorkerManager RegisterForTest and RegisterForAddonPrincipal should return a rejected promise on invalid call parameters. r=asuth
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: