Bug 1721214 - ServiceWorkerManager RegisterForTest and RegisterForAddonPrincipal should return a rejected promise on invalid call parameters. r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D120254