dom/serviceworkers/ServiceWorkerManager.cpp
@@ -724,21 +724,25 @@ ServiceWorkerManager::RegisterForTest(nsIPrincipal* aPrincipal,
     outer->MaybeRejectWithAbortError(
         "registerForTest only allowed when dom.serviceWorkers.testing.enabled "
         "is true");
+    outer.forget(aPromise);
     return NS_OK;
   }
 
   if (aPrincipal == nullptr) {
     outer->MaybeRejectWithAbortError("Missing principal");
+    outer.forget(aPromise);
     return NS_OK;
   }
 
   if (aScriptURL.IsEmpty()) {
     outer->MaybeRejectWithAbortError("Missing script url");
+    outer.forget(aPromise);
     return NS_OK;
   }
 
   if (aScopeURL.IsEmpty()) {
     outer->MaybeRejectWithAbortError("Missing scope url");
+    outer.forget(aPromise);
     return NS_OK;
   }
 
@@ -749,6 +753,7 @@ ServiceWorkerManager::RegisterForTest(nsIPrincipal* aPrincipal,
 
   if (!clientInfo.isSome()) {
     outer->MaybeRejectWithUnknownError("Error creating clientInfo");
+    outer.forget(aPromise);
     return NS_OK;
   }
 
@@ -2591,6 +2596,7 @@ ServiceWorkerManager::RegisterForAddonPrincipal(nsIPrincipal* aPrincipal,
   if (!enabled) {
     outer->MaybeRejectWithNotAllowedError(
         "Disabled. extensions.backgroundServiceWorker.enabled is false");
+    outer.forget(aPromise);
     return NS_OK;
   }
 
@@ -2598,6 +2604,7 @@ ServiceWorkerManager::RegisterForAddonPrincipal(nsIPrincipal* aPrincipal,
   auto* addonPolicy = BasePrincipal::Cast(aPrincipal)->AddonPolicy();
   if (!addonPolicy) {
     outer->MaybeRejectWithNotAllowedError("Not an extension principal");
+    outer.forget(aPromise);
     return NS_OK;
   }
 
@@ -2607,6 +2614,7 @@ ServiceWorkerManager::RegisterForAddonPrincipal(nsIPrincipal* aPrincipal,
     scope.Assign(NS_ConvertUTF16toUTF8(result.unwrap()));
   } else {
     outer->MaybeRejectWithUnknownError("Unable to resolve addon scope URL");
+    outer.forget(aPromise);
     return NS_OK;
   }
 
@@ -2615,6 +2623,7 @@ ServiceWorkerManager::RegisterForAddonPrincipal(nsIPrincipal* aPrincipal,
 
   if (scriptURL.IsEmpty()) {
     outer->MaybeRejectWithNotFoundError("Missing background worker script url");
+    outer.forget(aPromise);
     return NS_OK;
   }
 
@@ -2623,6 +2632,7 @@ ServiceWorkerManager::RegisterForAddonPrincipal(nsIPrincipal* aPrincipal,
 
   if (!clientInfo.isSome()) {
     outer->MaybeRejectWithUnknownError("Error creating clientInfo");
+    outer.forget(aPromise);
     return NS_OK;
   }
 
